[package]
name = "radar-ip"
version = "0.2.0"
edition = "2021"
description = "Scan an IP range via SSH and find which host owns a given MAC address"

[dependencies]
clap     = { version = "4.4", features = ["derive"] }
tokio    = { version = "1.0", features = ["full"] }
thiserror = "1.0"
ssh2     = "0.9"
ipnet    = "2.9"
regex    = "1.10"
log      = "0.4"
env_logger = "0.10"
dotenvy  = "0.15"
eframe   = "0.29"
tempfile = "3.12"
